--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 td, th {
-  text-align: center;
+  /* text-align: center; */
   padding: 8px;
   border-top: 1px solid black;
   border-collapse: collapse;
